# candy-travel

./: .gitignore  README.md  docker-compose.yml  index.html  metadata.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
backend/: .env.example  README.md  alembic.ini  package.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_users.py  0002_trips.py  0003_trip_events.py  0004_checklist.py  0005_trip_members.py  0006_trip_invites.py  0007_add_canceled_trip_status.py  0008_travel_inspirations.py  0009_trip_event_coordinates.py
backend/app/: config.py  db.py  deps.py  main.py  redis_client.py
backend/app/models/: __init__.py  base.py  checklist.py  inspiration.py  trip.py  trip_event.py  trip_invite.py  trip_member.py  user.py
backend/app/routes/: ai_import.py  auth.py  checklist.py  health.py  inspirations.py  me.py  places.py  trip_events.py  trip_invites.py  trips.py
backend/app/schemas/: ai_import.py  auth.py  checklist.py  inspiration.py  place.py  trip.py  trip_event.py  trip_invite.py  trip_member.py  trip_summary.py  user.py
backend/app/services/: ai_client.py  ai_trip_event_extractor.py  checklist_seed.py  jwt_service.py  tencent_map.py  trip_access.py  trip_summary.py  wechat.py  xiaohongshu_client.py
backend/src/: config.ts  index.ts
backend/src/routes/: ai-import.ts  (+2 more)
backend/tests/: test_ai_client.py  test_ai_trip_event_extractor.py  test_ai_trip_event_import.py  test_inspirations_share_reader.py  test_places.py  test_trip_event_coordinates.py  test_trip_sharing.py  test_xiaohongshu_client.py
(+96 files in other folders)
